Add initial version for a 'real' deployment
Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/.editorconfig
+++ b/.editorconfig
@@ -23,6 +23,11 @@ trim_trailing_whitespace = true
 indent_size = 2
 indent_style = space
 
+# YAML-formatted (requires spaces not tabs)
+[{network-config*,meta-data*,user-data*}]
+indent_size = 2
+indent_style = space
+
 # Make sure we don't trim hard line breaks
 # Using pre-commit we can clean out unwanted trailing whitespace
 [*.md]
