--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,15 +5,15 @@ stages:
 - build
 
 image:
-  name: danielfdickinson/gitlab-debian-ansible-pre-commit:0.2.1
+  name: danielfdickinson/gitlab-debian-ansible-pre-commit:0.2.2
+
+include:
+- template: Workflows/MergeRequest-Pipelines.gitlab-ci.yml
 
 # before_script:
 # - echo here
 
 checks_a:
-  rules:
-  - if: $CI_PIPELINE_SOURCE == 'push' && $CI_COMMIT_BRANCH =~ /^doci$/ # yamllint disable-line
-  - if: $CI_PIPELINE_SOURCE == 'merge_request_event' && $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME !~ /doci$/ # yamllint disable-line
   stage: checks
   script:
   - chmod 0700 .
