--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,10 +5,13 @@ stages:
 - build
 
 image:
-  name: danielfdickinson/gitlab-debian-ansible-pre-commit:0.2.2
+  name: danielfdickinson/gitlab-debian-ansible-pre-commit:0.2.3
 
-include:
-- template: Workflows/MergeRequest-Pipelines.gitlab-ci.yml
+workflow:
+  rules:
+  - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+  - if: $CI_COMMIT_TAG
+  - if: $CI_COMMIT_REF_PROTECTED
 
 # before_script:
 # - echo here
