Add example install session to README
Signed-off-by: Daniel F. Dickinson <dfdpublic@wildtechgarden.ca>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -116,6 +116,6 @@ repos:
     - --show-context
     - --show-suggestions
     - --validate-directives
-    exclude: ^(LICENSE|tests/config/cspell.json|\.gitlab-ci\.yml$) # yamllint disable-line
+    exclude: ^(LICENSE|tests/config/cspell.json|\.gitlab-ci\.yml|README.md$) # yamllint disable-line
 # yamllint enable rule:key-ordering
 ...
